--- a/app/code/EcommerceBuilder/PlatformSetup/view/frontend/layout/author_index_index.xml
+++ b/app/code/EcommerceBuilder/PlatformSetup/view/frontend/layout/author_index_index.xml
@@ -2,7 +2,7 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="1column" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceContainer name="content">
-            <block name="author_data" class="EcommerceBuilder\PlatformSetup\Block\Data" template="data.phtml"/>
+            <block name="author_data" class="EcommerceBuilder\PlatformSetup\Block\ProductData" template="product_data.phtml"/>
         </referenceContainer>
     </body>
 </page>
