--- a/app/code/EcommerceBuilder/PlatformSetup/view/frontend/layout/author_index_index.xml
+++ b/app/code/EcommerceBuilder/PlatformSetup/view/frontend/layout/author_index_index.xml
@@ -1,5 +1,8 @@
 <?xml version="1.0"?>
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="1column" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
+    <head>
+        <script src="EcommerceBuilder_PlatformSetup/js/script-example.js" defer="true"/>
+    </head>
     <body>
         <referenceContainer name="content">
             <block name="author_data" class="EcommerceBuilder\PlatformSetup\Block\ProductData" template="product_data.phtml"/>
